infrastructure/traefik/middlewares.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: allow-neoline
  namespace: kube-system
spec:
  ipAllowList:
    sourceRange:
      # - 84.2.218.60/32
      - 0.0.0.0/0
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: global-ratelimit
  namespace: kube-system
spec:
  rateLimit:
    average: 100
    burst: 50
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-headers
  namespace: kube-system
spec:
  headers:
    customResponseHeaders:
      X-Frame-Options: "DENY"
      X-Content-Type-Options: "nosniff"
      X-XSS-Protection: "1; mode=block"
      Referrer-Policy: "strict-origin-when-cross-origin"
      Strict-Transport-Security: "max-age=63072000; includeSubDomains; preload"
      Permissions-Policy: "geolocation=(),midi=(),sync-xhr=(),microphone=(),camera=(),magnetometer=(),gyroscope=(),fullscreen=(self),payment=()"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: secure-chain
  namespace: kube-system
spec:
  chain:
    middlewares:
      - name: security-headers
      - name: global-ratelimit
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cache
  namespace: kube-system
spec:
  plugin:
    souin:
      default_cache:
        ttl: 60s
        default_cache_control: "public, max-age=86400"
